--- a/frontend/erp/package.json
+++ b/frontend/erp/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
