--- a/frontend/erp/package.json
+++ b/frontend/erp/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
     "d3": "^7.9.0",
     "echarts": "^5.6.0",
+    "papaparse": "^5.5.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
